Fixed spacing

--- a/web/components/ui/MagicHeroContent/_magic-hero-content.scss
+++ b/web/components/ui/MagicHeroContent/_magic-hero-content.scss
@@ -22,7 +22,8 @@
     width: 100%;
     overflow: hidden;
     &--sticky {
-      padding-top: 100px;
+      padding-top: 50px;
+      
     }
   }
   .pin-container .panel {
